--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version : "3.3"
 services :
   web :
-     image : dheerajd13/my-note-app:tagname:latest
+     image : dheerajd13/my-note-app:latest
      ports :
          - "8000:8000"
